--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "mkdir -p dist && cp node_modules/phaser/dist/phaser-arcade-physics.min.js dist/"
+    "prepare": "mkdir -p dist && cp node_modules/phaser/dist/phaser-arcade-physics.min.js dist/",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
