--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Set git commit hash
+        run: sed -i "s/__GIT_COMMIT_HASH__/$(git rev-parse --short HEAD)/g" dist/index.html
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
